crates/jarl-core/src/lints/dplyr/dplyr_group_by_ungroup/snapshots/jarl_core__lints__dplyr__dplyr_group_by_ungroup__tests__fix_splice.snap
---
source: crates/jarl-core/src/lints/dplyr/dplyr_group_by_ungroup/mod.rs
expression: "get_unsafe_fixed_text_with_cache(vec![\"library(dplyr); x |> group_by(!!!syms(grps)) |> summarize(a = mean(b)) |> ungroup()\"],\n\"dplyr_group_by_ungroup\", &NS,)"
---
OLD:
====
library(dplyr); x |> group_by(!!!syms(grps)) |> summarize(a = mean(b)) |> ungroup()
NEW:
====
library(dplyr); x |> summarize(a = mean(b), .by = c(!!!syms(grps)))
